--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,5 +1,6 @@
 # Uncomment the following line to enable deep sleep
-# CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
 
 # Uncomment the following line to increase the keyboard's wireless range
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
@@ -9,4 +10,9 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=7
 
 # Uncomment the following line to enable USB Logging (this increases power usage by a significant amount, turn it off when not in use)
-# CONFIG_ZMK_USB_LOGGING=y
+CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_EXT_POWER=y
+CONFIG_ZMK_WIDGET_WPM_STATUS=n
+
+CONFIG_ZMK_BATTERY_REPORT_INTERVAL=600
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
